removed redundancy in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-pythonpath = [".", "website"]
+pythonpath = ["website"]
 
 [tool.coverage.run]
 branch = true
